--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,15 @@
 
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="page-container">
-    <div class="logo"></div>
     <nav class="navbar navbar-expand-lg navbar-color p-5 mb-5">
+      <div class="logo"><a href="#">Fight <i class="fas fa-fist-raised fist fa-2x"></i> Depression</a></div>
+      <div class="logo-2"><a href="#">Fight <i class="fas fa-fist-raised fa-2x"></i> Depression</a></div>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link nav-text" href="index.html">About Us</a></li>
@@ -25,8 +27,8 @@
               <img class="blog-img" src="image\image01.jpg" alt="sunset">
               <figcaption>Hope</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
+            <h2>Banish Depression from Your System</h2>
+            <p>Sadhguru speaks on how to handle yourself in such a way that you can banish depression from your system: “In yoga, depression is handled at the level of the...</p>
             <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/yoga/yoga-articles-yoga/banish-depression-from-your-system/';" value="Read More" />
           </article>
         </div>
@@ -37,8 +39,8 @@
               <img class="blog-img" src="image\image02.jpg" alt="flower">
               <figcaption>Beauty</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
+            <h2>Depression: Causes and How to Overcome It</h2>
+            <p>Sadhguru explains why depression happens, what happens to you when you are depressed and how to come out of depression and use it as a means to one’s growth.</p>
             <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
           </article>
         </div>
@@ -49,9 +51,9 @@
               <img class="blog-img" src="image\image03.jpg" alt="mountain-treking">
               <figcaption>Adventure</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>The Best Adventure Travel Blogs Right Now</h2>
+            <p>In the last few years a ton of people started travel blogging – some, to put it nicely, offering more quality content than others. So you don’t have to sort through thousands of adventure travel blogs on Google, we’ve highlighted a few that are genuinely deserving of your attention...</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.oars.com/blog/9-adventure-travel-blogs-you-should-be-reading/';" value="Read More" />
           </article>
         </div>
 
@@ -61,9 +63,9 @@
               <img class="blog-img" src="image\image04.jpg" alt="cycle">
               <figcaption>Be happy</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>How To Be Happy: >175 Tips to Help You Live a Happier Life</h2>
+            <p>How to be happy? It’s one of the most frequently asked questions in life. Yet, it all seems so subjective and vague.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.trackinghappiness.com/happy-blog/';" value="Read More" />
           </article>
         </div>
       </div>
@@ -71,14 +73,13 @@
       <div class="blog-container">
         <div class="containers">
           <article>
-
             <figure>
               <img class="blog-img" src="image\image05.jpg" alt="flower">
               <figcaption>Live</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>How to Live a Happier Life: 3 Quick Things You Can Do Today</h2>
+            <p>Happiness must not always come from big things and events. It can come from smaller, daily habits too.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.positivityblog.com/happy-today/';" value="Read More" />
           </article>
         </div>
 
@@ -89,9 +90,9 @@
               <img class="blog-img" src="image\image06.jpg" alt="white-wall">
               <figcaption>Move On</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Blog - Move On</h2>
+            <p>We're starting our new blog series with advice and tips on coping with stress. ... Our rebrand launch There have been some big changes at Move On.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://moveon.org.uk/blog';" value="Read More" />
           </article>
         </div>
 
@@ -101,9 +102,9 @@
               <img class="blog-img" src="image\image07.jpg" alt="jumping girl">
               <figcaption>Be Active</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Be active, be healthy</h2>
+            <p>Looking for a personal trainer or boot camp? We’ve got you covered. Click the link below to find a trainer or group class nearby.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.beactive.com.au/';" value="Read More" />
           </article>
         </div>
         <div class="containers">
@@ -112,9 +113,9 @@
               <img class="blog-img" src="image\image08.jpg" alt="happy child">
               <figcaption>live in the moment</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>My Quest To Be More Present And Enjoy Life More</h2>
+            <p>Lately, I have been wasting so much time on social media and on other things that it has started affecting other areas of my life.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.makingsenseofcents.com/2019/01/live-in-the-moment.html';" value="Read More" />
           </article>
         </div>
       </div>
@@ -124,11 +125,11 @@
           <article>
             <figure>
               <img class="blog-img" src="image\image09.jpg" alt="road">
-              <figcaption>jurney begin</figcaption>
+              <figcaption>journey begin</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Hi! I’m Jessie, a conscious solo female travel blogger.</h2>
+            <p>Think of me as your travel blog BFF, as I want to help you make your travel dreams a reality.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://jessieonajourney.com/';" value="Read More" />
           </article>
         </div>
 
@@ -138,9 +139,10 @@
               <img class="blog-img" src="image\image10.jpg" alt="sunrise">
               <figcaption>Ray of Hope</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Hope+Wellness Blog</h2>
+            <p>little snippets and advice for
+everyday challenges many people share.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.hope-wellness.com/blog/category/Depression';" value="Read More" />
           </article>
         </div>
         <div class="containers">
@@ -149,20 +151,20 @@
               <img class="blog-img" src="image\image11.jpg" alt="workingdesk">
               <figcaption>Be orgnised</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Best Organizing Blogs in 2021</h2>
+            <p>Sometimes we can use some inspiration to help motivate us to declutter and organize our homes.</p>
+            <input class="input-btn" type="button" onclick="location.href='https://www.thesimplicityhabit.com/awesome-organizing-blogs-that-will-inspire-you/';" value="Read More" />
           </article>
         </div>
         <div class="containers">
           <article>
             <figure>
               <img class="blog-img" src="image\image12.jpg" alt="flying-bird">
-              <figcaption>Sprea your wings</figcaption>
+              <figcaption>Spread your wings</figcaption>
             </figure>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ipsum beatae. Eaque excepturi est, quidem earum quisquam magni suscipit iste deserunt, minus, reiciendis impedit obcaecati.</p>
-            <input class="input-btn" type="button" onclick="location.href='https://isha.sadhguru.org/in/en/wisdom/article/depression-causes-how-to-overcome';" value="Read More" />
+            <h2>Why Use Freedom?</h2>
+            <p>We’ve heard it a lot: “Do people actually need Freedom?” The short answer: yes!</p>
+            <input class="input-btn" type="button" onclick="location.href='https://freedom.to/blog/';" value="Read More" />
           </article>
         </div>
       </div>
